<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Main2Activity">

    <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:scaleType="fitXY"
            android:src="@drawable/bcg"
            android:contentDescription="@string/todo"/>

    <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_marginTop="80dp"
            android:layout_marginLeft="140dp"
            android:src="@drawable/odiba"
            android:layout_marginStart="140dp"/>

    <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/hafidh_nur_anafi"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:layout_marginLeft="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="240dp"/>

    <TextView
            android:text="@string/ttl"
            android:textColor="@color/headings"
            android:layout_width="200dp"
            android:layout_height="20dp"
            android:layout_marginTop="330dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"/>

    <TextView
            android:layout_width="300dp"
            android:layout_height="30dp"
            android:text="@string/ttl1"
            android:layout_marginTop="350dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:textColor="@color/blacktowhite"/>

    <TextView
            android:text="@string/universitas"
            android:textColor="@color/headings"
            android:layout_width="200dp"
            android:layout_height="20dp"
            android:layout_marginTop="380dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"/>

    <TextView
            android:layout_width="300dp"
            android:layout_height="30dp"
            android:text="@string/universitas_pgri_semarang"
            android:layout_marginTop="400dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:textColor="@color/blacktowhite"/>

    <TextView
            android:text="@string/fakultas"
            android:textColor="@color/headings"
            android:layout_width="200dp"
            android:layout_height="20dp"
            android:layout_marginTop="430dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"/>

    <TextView
            android:layout_width="300dp"
            android:layout_height="30dp"
            android:text="@string/fakultas1"
            android:layout_marginTop="450dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:textColor="@color/blacktowhite"/>

    <TextView
            android:text="@string/program_studi"
            android:textColor="@color/headings"
            android:layout_width="200dp"
            android:layout_height="20dp"
            android:layout_marginTop="480dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"/>

    <TextView
            android:layout_width="300dp"
            android:layout_height="30dp"
            android:text="@string/informatika"
            android:layout_marginTop="500dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:textColor="@color/blacktowhite"/>

    <TextView
            android:text="@string/email"
            android:textColor="@color/headings"
            android:layout_width="200dp"
            android:layout_height="20dp"
            android:layout_marginTop="530dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"/>

    <TextView
            android:layout_width="300dp"
            android:layout_height="30dp"
            android:text="@string/email1"
            android:layout_marginTop="550dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:textColor="@color/blacktowhite"/>

    <TextView
            android:text="@string/instagram"
            android:textColor="@color/headings"
            android:layout_width="200dp"
            android:layout_height="20dp"
            android:layout_marginTop="580dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"/>

    <TextView
            android:layout_width="300dp"
            android:layout_height="30dp"
            android:text="@string/hafidhnafi"
            android:layout_marginTop="600dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:textColor="@color/blacktowhite"/>

</RelativeLayout>