<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:orientation="vertical"
        android:background="@drawable/bcground">


    <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="top|center"
            android:src="@drawable/odiba"
            android:id="@+id/circleImageView"
            android:layout_marginTop="99dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/textView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintVertical_chainStyle="spread"/>


    <TextView
            android:text="@string/hafidh_nur_anafi"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:id="@+id/textView"
            android:textSize="36sp"
            android:textColor="@android:color/white"
            app:layout_constraintTop_toBottomOf="@+id/circleImageView"
            android:layout_marginBottom="23dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/btn_profil"
            app:layout_constraintStart_toStartOf="parent"/>
    <Button
            android:text="@string/profil"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:background="@color/headings"
            android:id="@+id/btn_profil"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:layout_marginBottom="13dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/btn_ktkteman"
            app:layout_constraintStart_toStartOf="parent"/>
    <Button
            android:text="@string/kontak_teman"
            android:layout_width="0dp"
            android:textColor="@color/white"
            android:background="@color/headings"
            android:layout_height="wrap_content"
            android:id="@+id/btn_ktkteman"
            app:layout_constraintTop_toBottomOf="@+id/btn_profil"
            android:layout_marginBottom="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/btn_insta"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"/>
    <Button
            android:text="@string/my_instagram"
            android:id="@+id/btn_insta"
            android:textColor="@color/white"
            android:background="@color/headings"
            android:layout_width="0dp"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/btn_ktkteman"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="65dp"
            android:layout_marginStart="65dp"
            android:layout_marginEnd="65dp"
            android:layout_marginRight="65dp"
            app:layout_constraintHorizontal_bias="1.0" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"/>


</android.support.constraint.ConstraintLayout>